# ai-chunking

./: .gitignore  MANIFEST.in  README.md  __init__.py  debug_local_run.py  pyproject.toml
ai_chunking_ctk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: coordinate_splitter.py  memory.py  orchestrator.py  pipeline.py  scanner.py  tools.py
prompts/: coordinate_splitter.txt  doc_overview.txt  narrative_extractor.txt  structural_summary.txt
utils/: api.py  logger.py  matcher.py
