
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chunking-ctk"
version = "0.2.0"
description = "Enterprise-grade context-aware semantic chunking library powered by LLMs."
authors = [
  { name = "Antigravity", email = "assistant@deepmind.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
# ai-chunking = "ai_chunking.cli:app" # CLI not implemented yet

[tool.setuptools]
packages = ["ai_chunking"]

[tool.setuptools.package-dir]
ai_chunking = "."

[project.urls]
"Homepage" = "https://github.com/example/ai-chunking"
"Documentation" = "https://github.com/example/ai-chunking#readme"
"Source" = "https://github.com/example/ai-chunking"

# ─── Tool Configuration ───────────────────────────────────────────────────────

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B", "I", "UP", "N", "PL"]
ignore = []
line-length = 100
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["ai_chunking"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
